@@ -1,1 +1,0 @@
-postMessage({version:'2.38.1'},'*')
